--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -75,11 +75,13 @@
         .nickname_inputs {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: stretch;
             margin-bottom: 20px;
         }
 
         .nickname_inputs div {
+            display: flex;
+            align-items: center;
             margin-bottom: 10px;
         }
 
@@ -87,10 +89,11 @@
             color: white;
             margin-right: 10px;
             font-size: 16px;
+            flex-shrink: 0;
         }
 
         .nickname_inputs input {
-            width: 100px;
+            flex: 1;
             padding: 5px;
             font-size: 16px;
             text-align: center;
@@ -113,11 +116,11 @@
         <h1>Backgammon Board Editor</h1>
         <div class="nickname_inputs">
             <div>
-                <label for="white-input">белые:</label>
+                <label for="white-input">Белые:</label>
                 <input type="text" id="white-input">
             </div>
             <div>
-                <label for="black-input">черные:</label>
+                <label for="black-input">Черные:</label>
                 <input type="text" id="black-input">
             </div>
         </div>
