--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -12,7 +12,6 @@
             color: white;
             background-color: #1a1a1a;
             margin: 0;
-            padding: 80px 0 0 0;
             min-height: 100vh;
         }
 
@@ -89,6 +88,8 @@
             color: white;
             margin-right: 10px;
             font-size: 16px;
+            width: 80px;
+            text-align: left;
             flex-shrink: 0;
         }
 
