--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -75,7 +75,7 @@
             display: flex;
             flex-direction: column;
             align-items: stretch;
-            margin-bottom: 20px;
+            margin-bottom: 5vh;
         }
 
         .nickname_inputs div {
@@ -104,9 +104,7 @@
             color: white;
         }
 
-        @media (max-width: 768px) {
-
-        }
+        @media (max-width: 768px) {}
     </style>
 </head>
 
