--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -81,22 +81,22 @@
         .nickname_inputs div {
             display: flex;
             align-items: center;
-            margin-bottom: 10px;
+            margin-bottom: 0.625rem;
         }
 
         .nickname_inputs label {
             color: white;
-            margin-right: 10px;
-            font-size: 16px;
-            width: 80px;
+            margin-right: 0.625rem;
+            font-size: 1rem;
+            width: 5rem;
             text-align: left;
             flex-shrink: 0;
         }
 
         .nickname_inputs input {
             flex: 1;
-            padding: 5px;
-            font-size: 16px;
+            padding: 0.3125rem;
+            font-size: 1rem;
             text-align: center;
             border: 1px solid #444;
             border-radius: 4px;
@@ -114,11 +114,11 @@
         <div class="nickname_inputs">
             <div>
                 <label for="white-input">Белые:</label>
-                <input type="text" id="white-input">
+                <input type="text" id="white-input" value="nick_1">
             </div>
             <div>
                 <label for="black-input">Черные:</label>
-                <input type="text" id="black-input">
+                <input type="text" id="black-input" value="nick_2">
             </div>
         </div>
         <div class="board-wrapper">
