--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -17,6 +17,9 @@
 
         .container {
             width: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 5vh;
         }
 
         h1 {
@@ -25,7 +28,7 @@
 
         .board-wrapper {
             position: relative;
-            display: inline-block;
+            flex: 1;
         }
 
         canvas {
@@ -75,7 +78,6 @@
             display: flex;
             flex-direction: column;
             align-items: stretch;
-            margin-bottom: 5vh;
         }
 
         .nickname_inputs div {
