--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -78,6 +78,7 @@
             display: flex;
             flex-direction: column;
             align-items: stretch;
+            width: 70%;
         }
 
         .nickname_inputs div {
