--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -79,6 +79,7 @@
             flex-direction: column;
             align-items: stretch;
             width: 70%;
+            margin-bottom: 1rem;
         }
 
         .nickname_inputs div {
