--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -79,28 +79,28 @@
             flex-direction: column;
             align-items: stretch;
             width: 70%;
-            margin-bottom: 1rem;
+            margin-bottom: clamp(0.5rem, 1vh, 1rem);
         }
 
         .nickname_inputs div {
             display: flex;
             align-items: center;
-            margin-bottom: 0.625rem;
+            margin-bottom: clamp(0.625rem, 1vh, 1rem);
         }
 
         .nickname_inputs label {
             color: white;
-            margin-right: 0.625rem;
-            font-size: 1rem;
-            width: 5rem;
+            margin-right: clamp(0.625rem, 1vw, 1rem);
+            font-size: clamp(1rem, 1.5vw, 1.5rem);
+            width: clamp(5rem, 6vw, 8rem);
             text-align: left;
             flex-shrink: 0;
         }
 
         .nickname_inputs input {
             flex: 1;
-            padding: 0.3125rem;
-            font-size: 1rem;
+            padding: clamp(0.3125rem, 0.5vw, 0.5rem);
+            font-size: clamp(1rem, 1.5vw, 1.5rem);
             text-align: center;
             border: 1px solid #444;
             border-radius: 0.25rem;
@@ -108,8 +108,7 @@
             color: white;
         }
 
-        @media (max-width: 768px) {
-        }
+        @media (max-width: 768px) {}
     </style>
 </head>
 
