--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -180,7 +180,7 @@
         .bar-selector {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: flex-start;
             gap: 0.5rem;
             margin: 1rem 0;
             color: white;
@@ -189,7 +189,7 @@
         .bar-selector div {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: flex-start;
             gap: 0.25rem;
         }
 
@@ -232,7 +232,7 @@
         .off-selector {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: flex-start;
             gap: 0.5rem;
             margin: 1rem 0;
             color: white;
@@ -241,7 +241,7 @@
         .off-selector div {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: flex-start;
             gap: 0.25rem;
         }
 
