--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -179,9 +179,9 @@
 
         .bar-selector {
             display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            gap: 0.5rem;
+            flex-direction: row;
+            align-items: center;
+            gap: 1rem;
             margin: 1rem 0;
             color: white;
         }
@@ -231,9 +231,9 @@
 
         .off-selector {
             display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            gap: 0.5rem;
+            flex-direction: row;
+            align-items: center;
+            gap: 1rem;
             margin: 1rem 0;
             color: white;
         }
