--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -180,7 +180,7 @@
         .bar-selector {
             display: flex;
             flex-direction: row;
-            align-items: flex-start;
+            align-items: center;
             gap: 1rem;
             margin: 1rem 0;
             color: white;
@@ -238,7 +238,7 @@
         .off-selector {
             display: flex;
             flex-direction: row;
-            align-items: flex-start;
+            align-items: center;
             gap: 1rem;
             margin: 1rem 0;
             color: white;
