--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -152,8 +152,9 @@
 
         .checker-selector {
             display: flex;
-            justify-content: center;
-            gap: 1rem;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.5rem;
             margin: 1rem 0;
         }
 
