--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -150,12 +150,18 @@
             }
         }
 
+        .selectors-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 1rem 0;
+        }
+
         .checker-selector {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: flex-start;
             gap: 0.5rem;
-            margin: 1rem 0;
         }
 
         .checker-selector label {
@@ -183,7 +189,6 @@
             flex-direction: row;
             align-items: center;
             gap: 1rem;
-            margin: 1rem 0;
             color: white;
         }
 
@@ -236,12 +241,9 @@
             }
         }
 
-        @media (min-width: 768px) {
+        @media (min-width: 768px) {}
 
-        }
-
-        @media (min-width: 1200px) {
-        }
+        @media (min-width: 1200px) {}
     </style>
 </head>
 
@@ -261,25 +263,27 @@
         <div class="board-wrapper">
             <canvas id="boardCanvas" width="800" height="800"></canvas>
         </div>
-        <div class="checker-selector">
-            <label><input type="radio" name="checkerColor" value="white" checked> Белые</label>
-            <label><input type="radio" name="checkerColor" value="black"> Черные</label>
-        </div>
-    </div>
-    <div class="bar-selector">
-        <div style="color: white; font-size: 1rem;">на баре:</div>
-        <div class="selectors">
-            <div>
-                <label for="white-bar-select">Белый:</label>
-                <select id="white-bar-select">
-                    <option value="0">0</option>
-                </select>
+        <div class="selectors-container">
+            <div class="checker-selector">
+                <label><input type="radio" name="checkerColor" value="white" checked> Белые</label>
+                <label><input type="radio" name="checkerColor" value="black"> Черные</label>
             </div>
-            <div>
-                <label for="black-bar-select">Черный:</label>
-                <select id="black-bar-select">
-                    <option value="0">0</option>
-                </select>
+            <div class="bar-selector">
+                <div style="color: white; font-size: 1rem;">на баре:</div>
+                <div class="selectors">
+                    <div>
+                        <label for="white-bar-select">Белый:</label>
+                        <select id="white-bar-select">
+                            <option value="0">0</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="black-bar-select">Черный:</label>
+                        <select id="black-bar-select">
+                            <option value="0">0</option>
+                        </select>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
