--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -162,6 +162,7 @@
             flex-direction: column;
             align-items: flex-start;
             gap: 0.5rem;
+            padding-left: 10%;
         }
 
         .checker-selector label {
@@ -188,17 +189,12 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            gap: 1rem;
+            justify-content: space-between;
             color: white;
         }
 
-        .bar-selector .selectors {
-            display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
-        }
-
-        .bar-selector .selectors div {
+        .bar-selector>div:first-child,
+        .bar-selector>div:last-child {
             display: flex;
             flex-direction: column;
             align-items: flex-start;
@@ -269,20 +265,18 @@
                 <label><input type="radio" name="checkerColor" value="black"> Черные</label>
             </div>
             <div class="bar-selector">
+                <div>
+                    <label for="white-bar-select">Белый:</label>
+                    <select id="white-bar-select">
+                        <option value="0">0</option>
+                    </select>
+                </div>
                 <div style="color: white; font-size: 1rem;">на баре:</div>
-                <div class="selectors">
-                    <div>
-                        <label for="white-bar-select">Белый:</label>
-                        <select id="white-bar-select">
-                            <option value="0">0</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label for="black-bar-select">Черный:</label>
-                        <select id="black-bar-select">
-                            <option value="0">0</option>
-                        </select>
-                    </div>
+                <div>
+                    <label for="black-bar-select">Черный:</label>
+                    <select id="black-bar-select">
+                        <option value="0">0</option>
+                    </select>
                 </div>
             </div>
         </div>
