--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -211,8 +211,8 @@
 
         .bar-selector .selectors div {
             display: flex;
-            flex-direction: column;
-            align-items: flex-start;
+            flex-direction: row;
+            align-items: center;
             gap: 0.25rem;
         }
 
