--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -194,7 +194,8 @@
 
         .bar-selector {
             position: absolute;
-            left: 50%;
+            padding-left: 10%;
+            left: 40%;
             transform: translateX(-50%);
             display: flex;
             flex-direction: row;
