--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -199,13 +199,13 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            gap: 1rem;
+            gap: 1.5rem;
             color: white;
         }
 
         .bar-selector .selectors {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             gap: 0.5rem;
         }
 
