--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -168,7 +168,7 @@
 
         .bar-selector {
             position: absolute;
-            left: 40%;
+            left: 50%;
             transform: translateX(-50%);
         }
 
@@ -194,18 +194,18 @@
 
         .bar-selector {
             position: absolute;
-            left: 60%;
+            left: 50%;
             transform: translateX(-50%);
             display: flex;
             flex-direction: row;
             align-items: center;
-            gap: 1.5rem;
+            gap: 1rem;
             color: white;
         }
 
         .bar-selector .selectors {
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             gap: 0.5rem;
         }
 
@@ -217,11 +217,11 @@
         }
 
         .bar-selector label {
-            font-size: 1rem;
+            font-size: 0.8rem;
         }
 
         .bar-selector select {
-            font-size: 1rem;
+            font-size: 0.8rem;
             width: 50px;
             background-color: #2d2d2d;
             color: white;
