--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -205,7 +205,7 @@
 
         .bar-selector .selectors {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             gap: 0.5rem;
         }
 
