--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -218,6 +218,8 @@
 
         .bar-selector label {
             font-size: 0.8rem;
+            width: 60px;
+            text-align: right;
         }
 
         .bar-selector select {
