--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -160,6 +160,8 @@
         .checker-selector {
             position: absolute;
             left: 0;
+            top: 50%;
+            transform: translateY(-50%);
             display: flex;
             flex-direction: column;
             align-items: flex-start;
@@ -195,7 +197,8 @@
         .bar-selector {
             position: absolute;
             left: 50%;
-            transform: translateX(-50%);
+            top: 50%;
+            transform: translate(-50%, -50%);
             display: flex;
             flex-direction: row;
             align-items: center;
