--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -154,12 +154,11 @@
             position: relative;
             margin: 1rem 0;
             min-height: 4rem;
-            /* Ensure space for absolute positioned elements */
+            max-width: 50%;
         }
 
         .checker-selector {
             position: absolute;
-            left: 0;
             top: 50%;
             transform: translateY(-50%);
             display: flex;
