--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -195,9 +195,8 @@
 
         .bar-selector {
             position: absolute;
-            left: 50%;
             top: 50%;
-            transform: translate(-50%, -50%);
+            transform: translateY(-50%);
             display: flex;
             flex-direction: row;
             align-items: center;
