--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -159,6 +159,7 @@
 
         .game-type {
             position: absolute;
+            right: -80%;
             top: 50%;
             transform: translateY(-50%);
             display: flex;
