--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -170,6 +170,7 @@
 
         .game-type label {
             color: white;
+            text-align: center;
             font-size: 0.8rem;
         }
 
