--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -171,6 +171,7 @@
         .game-type label {
             color: white;
             font-size: 0.8rem;
+            width: 100%;
             text-align: center;
         }
 
