--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -249,9 +249,9 @@
             top: 50%;
             transform: translateY(-50%);
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             align-items: center;
-            gap: 0.3rem;
+            gap: 0.5rem;
             color: white;
         }
 
@@ -335,7 +335,7 @@
                 <label><input type="radio" name="checkerColor" value="black"> Черные</label>
             </div>
             <div class="bar-selector">
-                <div style="color: white; font-size: 0.8rem;">на баре:</div>
+                <div style="color: white; font-size: 0.8rem; text-align: center;">на баре:</div>
                 <div class="selectors">
                     <div>
                         <label for="white-bar-select">Белый:</label>
